--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -84,7 +84,7 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
         // 初始化 Waline (已去掉登录禁用，恢复正常登录模式)
         init({
           el: '#waline',
-          serverURL: 'https://cgfan-comments.vercel.app',
+          serverURL: 'https://comments.cgfan.com',
           lang: 'zh-CN',
           reaction: true,
           dark: 'auto',
